--- a/NEON_manuscript/Case studies/mvgam_case_study3.Rmd
+++ b/NEON_manuscript/Case studies/mvgam_case_study3.Rmd
@@ -16,7 +16,7 @@ library(knitr)
 opts_chunk$set(tidy.opts=list(width.cutoff=40),tidy=TRUE)
 ```
 
-Here we will use the `mvgam` package, which fits dynamic GAMs using MCMC sampling via the `JAGS` software (Note that `JAGS` is required; installation links are found [here](https://sourceforge.net/projects/mcmc-jags/files/)), to estimate paramaters of a Bayesian distributed lag model.  These models are used to describe simultaneously non-linear and delayed functional relationships between a covariate and a response, and are sometimes referred to as exposure-lag-response models. If we assume $\tilde{\boldsymbol{y}}_{t}$ is the conditional expectation of a discrete response variable $\boldsymbol{y}$ at time $\boldsymbol{t}$, the linear predictor for a dynamic distributed lag GAM with one lagged covariate is written as:
+Here we will use the `mvgam` package, which fits dynamic GAMs using MCMC sampling via either the `JAGS` software (installation links are found [here](https://sourceforge.net/projects/mcmc-jags/files/)) or via the `Stan` software (installation links are found [here](https://github.com/stan-dev/rstan/wiki/RStan-Getting-Started)), to estimate paramaters of a Bayesian distributed lag model.  These models are used to describe simultaneously non-linear and delayed functional relationships between a covariate and a response, and are sometimes referred to as exposure-lag-response models. If we assume $\tilde{\boldsymbol{y}}_{t}$ is the conditional expectation of a discrete response variable $\boldsymbol{y}$ at time $\boldsymbol{t}$, the linear predictor for a dynamic distributed lag GAM with one lagged covariate is written as:
 
 $$log(\tilde{\boldsymbol{y}}_{t})={\boldsymbol{B}}_0+\sum\limits_{k=1}^K{f}(\boldsymbol{b}_{k,t}\boldsymbol{x}_{k,t})+\boldsymbol{z}_{t}\,,$$
 where $\boldsymbol{B}_{0}$ is the unknown intercept, the $\boldsymbol{b}$'s are unknown spline coefficients estimating how the functional effect of covariate ($\boldsymbol{x}$) on $log(\tilde{\boldsymbol{y}}_{t})$ changes over increasing lags (up to a maximum lag of ($\boldsymbol{K}$)) and $\boldsymbol{z}$ is a dynamic latent trend component. 
@@ -101,7 +101,7 @@ data_test <- list(lag = data_all$lag[175:length(data_all$y),],
 
 Now we can fit a Bayesian GAM with distributed lag terms for precipitation and minimum temperature. The distributed lags are set up as tensor product smooth functions (see `help(te)` for an explanation of tensor product smooth constructions in the `mgcv` package) between `lag` and each covariate. We will start simply by assuming our data follow a `Poisson` observation process
 ```{r, message=FALSE, warning=FALSE}
-mod1 <- mvjagam(formula =  y ~ te(mintemp, lag, k = c(8, 4)) +
+mod1 <- mvgam(formula =  y ~ te(mintemp, lag, k = c(8, 4)) +
                  te(precip, lag, k = c(8, 4)),
                 data_train = data_train,
                 data_test = data_test,
@@ -124,7 +124,7 @@ plot(mod1, type = 'residuals')
 
 Given the overdispersion present in the data, we will now assume a [`Geometric-Poisson`](https://en.wikipedia.org/wiki/Geometric_Poisson_distribution) observation model, which can be [more flexible than the `Negative binomial` for modelling overdispersed count data](https://www.jstor.org/stable/2533492?origin=crossref&seq=1). In `mvgam` the `Geometric-Poisson` is estimated as a `Tweedie-Poisson` model with the power parameter `p` fixed at `1.5`
 ```{r, message=FALSE, warning=FALSE}
-mod2 <- mvjagam(formula =  y ~ te(mintemp, lag, k = c(8, 4)) +
+mod2 <- mvgam(formula =  y ~ te(mintemp, lag, k = c(8, 4)) +
                  te(precip, lag, k = c(8, 4)),
                 data_train = data_train,
                 data_test = data_test,
@@ -151,7 +151,7 @@ summary(mod2)
 
 As this is a timeseries and the residual plot hints at some autocorrelation remaining in the short-term lags, lets check if an `AR` latent trend process improves forecasts compared to the no-trend model. An important note here is the choice of prior for the overdispersion parameter `twdis`. This parameter and the latent trend variance can interact strongly, particularly when overdispersion is in the data high. This is because at high values of the dispersion parameter, there is less need for a latent trend to be able to capture any outliers and so the latent trend precision can go up toward infinity, approaching a space of very diffuse likelihood that forces the Gibbs samplers to take on frustratingly small step sizes. Likewise when there is not much need for overdispersion, the dispersion parameter can approach zero and move around in an equally uninformative parameter space. The latent trend operates on the log scale, so really we should not expect autocorrelated jumps in trappings of more than `6-8` from timepoint to timepoint (any larger and the trend will compete strongly with the overdispersion parameter, making it difficult for us to model the inherent overdispersion process and instead assuming it is all autocorrelation). A containment prior on the latent trend `sigma` will help achieve this
 ```{r, message=FALSE, warning=FALSE}
-mod3 <- mvjagam(formula =  y ~ te(mintemp, lag, k = c(8, 4)) +
+mod3 <- mvgam(formula =  y ~ te(mintemp, lag, k = c(8, 4)) +
                  te(precip, lag, k = c(8, 4)),
                 data_train = data_train,
                 data_test = data_test,
@@ -179,30 +179,41 @@ But there is no more evidence of autocorrelation in the residuals
 ```{r, fig.width = 6, fig.height = 5, fig.align='center'}
 plot(mod3, type = 'residuals')
 ```
-
-The version with the latent trend reduces in-sample DIC and will provide more realistic forecasts
-```{r}
-dic(mod2)
-dic(mod3)
+We can also demonstrate another feature of `mvgam`, which is the ability to use Hamiltonian Monte Carlo for parameter estimation via the software `Stan` (using the `rstan` interface). Note that `rstan` is currently required for this option to work, though support for other `Stan` interfaces will be added in future. Also note that currently there is no support for fitting `Tweedie` responses or dynamic factor models in `Stan`, though again these will be added in future. Because of these current limitations, we will stick with a `Negative Binomial` observation process for the `Stan` version. However there are great advantages when using `Stan`, which includes the option to estimate smooth latent trends via [Hilbert space approximate Gaussian Processes](https://arxiv.org/abs/2004.11408). This often makes sense for ecological series, which we expect to change smoothly over time. As expected when compared to the Gibbs sampler in `JAGS`, the `Stan` version converges very nicely
+```{r, message=FALSE, warning=FALSE}
+mod4 <- mvgam(formula =  y ~ te(mintemp, lag, k = c(8, 4)) +
+                 te(precip, lag, k = c(8, 4)),
+                data_train = data_train,
+                data_test = data_test,
+                family = 'nb',
+                chains = 4,
+                burnin = 2000,
+                trend_model = 'GP',
+              use_stan = T)
+summary(mod4)
 ```
-               
+
 As with all other `mvgam` objects, we can create plots of the estimated forecast distribution
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
-plot_mvgam_fc(mod3, series = 1, data_test = data_test, ylim = c(0, 100))
+plot_mvgam_fc(mod4, series = 1, data_test = data_test, ylim = c(0, 100))
+```
+The trend now evolves smoothly via an infinite dimensional Gaussian Process
+```{r, fig.width = 5, fig.height = 4, fig.align='center'}
+plot_mvgam_trend(mod4, series = 1)
 ```
 
 Traceplots of smooth penalties indicate good mixing and convergence of the four MCMC chains
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
-plot_mvgam_trace(mod3, 'rho')
+plot_mvgam_trace(mod4, 'rho')
 ```
 
 We can also create quick plots of the estimated smooth tensor product interactions for the distributed lag terms, which basically follow `mgcv`'s two-dimensional plotting utility but uses the `mvgam`'s estimated coefficients
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
-plot_mvgam_smooth(mod3, series = 1, smooth = 1)
+plot_mvgam_smooth(mod4, series = 1, smooth = 1)
 ```
 
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
-plot_mvgam_smooth(mod3, series = 1, smooth = 2)
+plot_mvgam_smooth(mod4, series = 1, smooth = 2)
 ```
 
 If you are like me then you'll find these plots rather difficult to interpret! The more intense yellow/white colours indicate higher predicted values, with the deeper red colours representing lower predicted values, but actually making sense of how the functional response is expected to change over different lags is not easy from these plots. HOwever, we can use the `predict_mvgam` function to generate much more interpretable plots. First we will focus on the effect of `mintemp` and generate a series of predictions to visualise how the estimated function changes over different lags. Set up prediction data by zeroing out all covariates apart from the covariate of interest
@@ -227,7 +238,7 @@ plot(1, type = "n",
 # value for centring the plot
 newdata$mintemp <- matrix(0, ncol = ncol(newdata$mintemp),
                          nrow = nrow(newdata$mintemp))
-preds <- predict(mod3, series = 1, newdata = newdata, type = 'link')
+preds <- predict(mod4, series = 1, newdata = newdata, type = 'link')
 offset <- mean(preds)
 
 for(i in 1:6){
@@ -240,7 +251,7 @@ for(i in 1:6){
                              length.out = length(newdata$year))
 
   # Predict on the link scale and shift by the offset so that values are roughly centred at zero
-  preds <- predict(mod3, series = 1, newdata = newdata, type = 'link') - offset
+  preds <- predict(mod4, series = 1, newdata = newdata, type = 'link') - offset
 
   # Calculate empirical prediction quantiles
   probs = c(0.05, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.95)
@@ -274,7 +285,7 @@ newdata$mintemp <- matrix(0, ncol = ncol(newdata$mintemp),
                          nrow = nrow(newdata$mintemp))
 newdata$precip <- matrix(0, ncol = ncol(newdata$precip),
                          nrow = nrow(newdata$precip))
-preds <- predict(mod3, series = 1, newdata = newdata, type = 'link')
+preds <- predict(mod4, series = 1, newdata = newdata, type = 'link')
 offset <- mean(preds)
 plot(1, type = "n",
      xlab = 'Precipitation',
@@ -288,7 +299,7 @@ for(i in 1:6){
   newdata$precip[,i] <- seq(min(data_train$precip),
                              max(data_train$precip),
                              length.out = length(newdata$year))
-  preds <- predict(mod3, series = 1, newdata = newdata, type = 'link') - offset
+  preds <- predict(mod4, series = 1, newdata = newdata, type = 'link') - offset
   probs = c(0.05, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.95)
   cred <- sapply(1:NCOL(preds),
                  function(n) quantile(preds[,n],
@@ -309,14 +320,14 @@ legend('topleft', legend = paste0('lag', seq(0, 5)),
        col = cols, lty = 1, lwd = 6)
 ```
 
-All of the usual functions in `mvgam` can also be used for list data objects, so long as they contain the necessary fields `series`, `season` and `year`. For example, posterior retrodictive checks for the in-sample training period: 
+All of the usual functions in `mvgam` can also be used for list data objects and for models fitted with `Stan`, so long as they contain the necessary fields `series`, `season` and `year`. For example, posterior retrodictive checks for the in-sample training period: 
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
-ppc(mod3, series = 1, type = 'cdf')
+ppc(mod4, series = 1, type = 'cdf')
 ```
 
 and predictive checks for the out of sample forecast period (which demonstrates how the model tends to overpredict for the forecast period in this particular example):
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
-ppc(mod3, data_test = data_test, series = 1, type = 'cdf')
+ppc(mod4, data_test = data_test, series = 1, type = 'cdf')
 ```
 
 Logical next steps for interrogating this model would be to trial different trend types (i.e. random walk), replace the distributed lag function for `precip` with a standard smooth function (that does not include lag interactions, as clearly the model above indicates that these are not supported) and inspect whether different covariates (such as `ndvi` or `maxtemp`) might play a role in modulating catches of `PP`. Finally, once we are satisfied that we have a well-performing model that we can understand and interrogate, we could expand up to a multivariate model by including other species as response variables. This would allow us to capture any possible unobserved dependencies in the catches of multiple co-occurring species in a single unified modelling framework
